# okonomi

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
okonomi/: __init__.py  agent.py  callbacks.py  cli.py  config.py  interface.py  utils.py
okonomi/prompt_templates/: system_prompt.yml
okonomi/tools/: image.py  memory.py  prompt.py  strategies.py
